--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,13 @@ services:
       - DB_HOST=db
       - DB_PORT=28015
     working_dir: /home/node/app
+    user: sudoku_api
     ports:
       - "8080:8080"
 
   db:
     image: rethinkdb:2
+    user: sudoku_db
     volumes:
       - data:/data
 
